Update: Fix delete modal on mobile

--- a/src/components/deleteModal/DeleteModal.css
+++ b/src/components/deleteModal/DeleteModal.css
@@ -13,7 +13,6 @@
 	height: 40%;
 	width: 50%;
 	max-width: 500px;
-	opacity: 0.9;
 	padding: 1em;
 	border-radius: 9px;
 }
