--- a/src/pages/ReadNote/ReadNote.css
+++ b/src/pages/ReadNote/ReadNote.css
@@ -69,6 +69,7 @@ main > h3 {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 1em;
+	overflow: hidden;
 }
 
 
